@@ -36,6 +36,7 @@ int printIvalCharPtr (symbol *, sym_link *, value *, struct dbuf_s *);
 
 extern symbol *interrupts[];
 extern set *publics;
+extern set *strSym;
 
 int pointerTypeToGPByte (const int p_type, const char *iname, const char *oname);
 
